# csinva.github.io

./: .gitignore  .gitmodules  01_about.html  01_research.html  02_experience.html  02_research.html  02_work.html  03_notes.html  04_contact.html  404.html  CNAME  LICENSE  LICENSE.md  _config.yml  index.html  readme.markdown  readme.md  serve.command
_blog/compiled_notes/: _config.yml  _toc.yml  copy_and_build.py  intro.md  pyproject.toml
_blog/compiled_notes/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
_blog/compiled_notes/_build/.doctrees/: environment.pickle  intro.doctree  readme.doctree
_blog/compiled_notes/_build/.doctrees/notes/ai/: ai.doctree  ai_futures.doctree  cogsci.doctree  decisions.doctree  fairness_sts.doctree  knowledge_rep.doctree  logic.doctree  nlp.doctree  philosophy.doctree  psychology.doctree  search.doctree
_blog/compiled_notes/_build/.doctrees/notes/cs/: algo.doctree  arch.doctree  comp_theory.doctree  cpp_ref.doctree  cs.doctree  data_structures.doctree  databases.doctree  graphs.doctree  java_ref.doctree  os.doctree  python_ref.doctree  quantum.doctree  retrieval.doctree  software.doctree
_blog/compiled_notes/_build/.doctrees/notes/math/: analysis.doctree  calculus.doctree  chaos.doctree  differential_equations.doctree  linear_algebra.doctree  (+5 more)
_blog/compiled_notes/_build/html/: .buildinfo  genindex.html  index.html  intro.html  objects.inv  readme.html  search.html  searchindex.js
_blog/compiled_notes/_build/html/_sources/: intro.md  readme.md
_blog/compiled_notes/_build/html/_static/: basic.css  documentation_options.js
(+745 files in other folders)
