[project]
name = "compiled-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-book>=1.0.4.post1",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "scikit-learn>=1.7.2",
    "six>=1.17.0",
    "tqdm>=4.67.1",
]
